# reinforcement_learning_blackjack

./: Prezentacja_RL_Radziszewski_Zernaczuk.pptx  README.md  analyze_results.py  inspect_checkpoint.py  pyproject.toml  run_all500k.sh  watch_agent.py
analysis/: report.md  summary_by_algo_reward.csv  summary_by_run.csv
checkpoints/: a2c_r1_seed2_1M.pt
results/a2c_r0_seed0_20260116-124456/: config.json  metrics.csv
results/a2c_r0_seed0_20260124-123118/: checkpoint_a2c.pt  config.json  metrics.csv
results/a2c_r0_seed1_20260116-130853/: config.json  metrics.csv
results/a2c_r0_seed1_20260124-123654/: checkpoint_a2c.pt  config.json  metrics.csv
results/a2c_r0_seed2_20260116-133243/: config.json  metrics.csv
results/a2c_r0_seed2_20260124-124305/: checkpoint_a2c.pt  config.json  metrics.csv
results/a2c_r1_seed0_20260116-202333/: checkpoint_a2c.pt  config.json  metrics.csv
results/a2c_r1_seed0_20260124-123315/: checkpoint_a2c.pt  config.json  metrics.csv
results/a2c_r1_seed1_20260116-131657/: config.json  metrics.csv
results/a2c_r1_seed1_20260124-123844/: checkpoint_a2c.pt  config.json  metrics.csv
results/a2c_r1_seed2_20260116-134039/: config.json  metrics.csv
results/a2c_r1_seed2_20260124-130049/: checkpoint_a2c.pt  config.json  metrics.csv
results/a2c_r2_seed0_20260116-130056/: config.json  metrics.csv
results/a2c_r2_seed0_20260124-123505/: checkpoint_a2c.pt  config.json  metrics.csv
src/: a2c_gae.py  doubleq.py  envs.py  eval.py  features.py  metrics.py  run.py  run_best_200k.sh  run_tuning_grid.sh  training.py  tune.py  utils.py  viz.py
(+62 files in other folders)
