[project]
name = "reinforcement-learning"
version = "1.0.0"
description = "Advanced Reinforcement Learning on Gymnasium Blackjack (Double Q-learning vs A2C-GAE)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[toy-text]>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
